--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
+          <h2 id="text3">Bbi yêu anh có phải không nào ._.</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            Nếu Bbi ko trả lời mà thoát ra tức là muốn làm anhanh rùi đó nha :v
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
